[gd_scene load_steps=13 format=3 uid="uid://c1u8x43c7ulq1"]

[ext_resource type="Theme" uid="uid://bnaa8nx0gbxlb" path="res://DefaultTheme.tres" id="1_es5up"]
[ext_resource type="Script" uid="uid://cxoh4s5kbi1d6" path="res://Scenes/PauseMenu/PauseMenu.gd" id="2_yc4es"]
[ext_resource type="PackedScene" uid="uid://kps6urduxyub" path="res://Classes/CustomUI/GamepadSelectButton/GamepadSelectButton.tscn" id="3_a2m5i"]
[ext_resource type="PackedScene" uid="uid://dekyiuf4skj47" path="res://Scenes/ConfigControllers/ConfigControllers.tscn" id="3_oikoa"]
[ext_resource type="Script" uid="uid://d37o27scapfhv" path="res://Classes/CustomUI/MenuStage.gd" id="4_x6lxg"]
[ext_resource type="Texture2D" uid="uid://biqxgctcsq3sa" path="res://Assets/UI/ButtonPressedBorder.png" id="5_ifvnd"]
[ext_resource type="AudioStream" uid="uid://bfxaaxpty45aa" path="res://Assets/SFX/fx_menu_pause.wav" id="6_blrd7"]
[ext_resource type="AudioStream" uid="uid://du6kyo2c8xwio" path="res://Assets/SFX/fx_menu_unpause.wav" id="7_x6lxg"]

[sub_resource type="Resource" id="Resource_x6lxg"]
resource_local_to_scene = true
script = ExtResource("4_x6lxg")
invisibleNodes = Array[NodePath]([NodePath("ControlButtons/EditButton"), NodePath("ControlButtons/BackButton")])
visibleNodes = Array[NodePath]([NodePath("ControlButtons/CancelButton"), NodePath("ControlButtons/AcceptButton"), NodePath("EditButtons/GrabButton"), NodePath("EditButtons/JumpButton"), NodePath("EditButtons/PauseButton"), NodePath("EditButtons"), NodePath("ControlButtons")])
enabledNodes = Array[NodePath]([NodePath("EditButtons/PauseButton"), NodePath("EditButtons/JumpButton"), NodePath("EditButtons/GrabButton")])
focusedNode = NodePath("ControlButtons/CancelButton")
metadata/_custom_type_script = "uid://d37o27scapfhv"

[sub_resource type="Resource" id="Resource_qr5tg"]
resource_local_to_scene = true
script = ExtResource("4_x6lxg")
invisibleNodes = Array[NodePath]([NodePath("ControlButtons/CancelButton"), NodePath("ControlButtons/AcceptButton")])
visibleNodes = Array[NodePath]([NodePath("EditButtons"), NodePath("EditButtons/PauseButton"), NodePath("EditButtons/JumpButton"), NodePath("EditButtons/GrabButton"), NodePath("ControlButtons/EditButton"), NodePath("ControlButtons/BackButton"), NodePath("ControlButtons")])
disabledNodes = Array[NodePath]([NodePath("EditButtons/GrabButton"), NodePath("EditButtons/JumpButton"), NodePath("EditButtons/PauseButton")])
enabledNodes = Array[NodePath]([NodePath("ControlButtons/EditButton"), NodePath("ControlButtons/BackButton")])
focusedNode = NodePath("ControlButtons/BackButton")
transitionButtons = Dictionary[NodePath, StringName]({
NodePath("ControlButtons/EditButton"): &"edit"
})
metadata/_custom_type_script = "uid://d37o27scapfhv"

[sub_resource type="Resource" id="Resource_o66ro"]
resource_local_to_scene = true
script = ExtResource("4_x6lxg")
visibleNodes = Array[NodePath]([NodePath("Warning")])
metadata/_custom_type_script = "uid://d37o27scapfhv"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pf7fp"]
texture = ExtResource("5_ifvnd")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_es5up")
script = ExtResource("2_yc4es")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.270588)

[node name="Menu" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -836.0
offset_top = -403.0
offset_right = 836.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0571873, 0.501852, 0, 1)

[node name="ConfigControllers" parent="Menu" instance=ExtResource("3_oikoa")]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
offset_left = 445.0
offset_top = 93.0
offset_right = -445.0
stages = Dictionary[StringName, ExtResource("4_x6lxg")]({
&"edit": SubResource("Resource_x6lxg"),
&"main": SubResource("Resource_qr5tg"),
&"warning": SubResource("Resource_o66ro")
})

[node name="PlayerName" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -268.0
offset_top = 16.0
offset_right = 268.0
offset_bottom = 83.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 66
text = "Pausado por pancho"

[node name="Buttons" type="VBoxContainer" parent="Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -74.0
offset_right = 32.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GamepadSelectButton" parent="Menu/Buttons" node_paths=PackedStringArray("upSelect", "downSelect", "upFallback", "downFallback") instance=ExtResource("3_a2m5i")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pf7fp")
text = "Editar controles"
focused = true
upSelect = NodePath("../Back")
downSelect = NodePath("../Back")
upFallback = NodePath("../Back")
downFallback = NodePath("../Back")

[node name="Back" parent="Menu/Buttons" node_paths=PackedStringArray("upSelect", "downSelect", "upFallback", "downFallback") instance=ExtResource("3_a2m5i")]
layout_mode = 2
text = "Volver"
upSelect = NodePath("../GamepadSelectButton")
downSelect = NodePath("../GamepadSelectButton")
upFallback = NodePath("../GamepadSelectButton")
downFallback = NodePath("../GamepadSelectButton")

[node name="Pause" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_blrd7")
volume_db = -6.0
bus = &"SFX"

[node name="Unpause" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_x6lxg")
volume_db = -6.0
bus = &"SFX"

[connection signal="finished" from="Menu/ConfigControllers" to="." method="stopEditting"]
[connection signal="pressed" from="Menu/Buttons/GamepadSelectButton" to="." method="startEditting"]
[connection signal="pressed" from="Menu/Buttons/Back" to="." method="endPause"]
